[package]
name                  = "plz"
version               = "0.1.0"
publish               = true
authors.workspace     = true
edition.workspace     = true
homepage.workspace    = true
repository.workspace  = true

[[bin]]
name = "plz"
path = "src/main.rs"

[dependencies]
pulzaar-config  = { path = "../config" }

dialoguer       = { workspace = true }
eyre            = { workspace = true, features = [ "auto-install" ] }
lexopt          = { workspace = true }

[dev-dependencies]
radicle-cli-test  = { workspace = true }
tempfile          = { workspace = true }
