[package]
name = "filament-relayer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
bincode = "1.3.3"
thiserror = "1.0"
anyhow = "1.0"
web3 = "0.18"                                       # Or ethers-rs, if you prefer
reqwest = { version = "0.11", features = ["json"] } # Enable JSON support
# TODO: think about using sov-modules-api -@brapse
sled = "0.34"                                      # For the embedded database
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"                                # Or simple_logger
clap = { version = "4.5", features = ["derive"] }  # For CLI parsing
chrono = "0.4"
hex = "0.4"
tokio = { version = "1", features = ["full"] }     # For async runtime
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
borsh = "1"                                        # Make sure the version matches the Hub's version!
filament-hub-core = { path = "../modules/core" }
[lints]
workspace = true
