[package]
name          = "filament-hub-rollup"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
publish       = { workspace = true }

[lints]
workspace = true

[dependencies]
filament-hub-config   = { workspace = true }
filament-hub-stf      = { workspace = true, features = [ "native" ] }
filament-prover-risc0 = { workspace = true }

sov-celestia-adapter          = { workspace = true, features = [ "native" ] }
sov-db                        = { workspace = true }
sov-kernels                   = { workspace = true, features = [ "native" ] }
sov-mock-da                   = { workspace = true, features = [ "native" ] }
sov-mock-zkvm                 = { workspace = true, features = [ "native" ] }
sov-modules-api               = { workspace = true, features = [ "native" ] }
sov-modules-rollup-blueprint  = { workspace = true }
sov-modules-stf-blueprint     = { workspace = true, features = [ "native" ] }
sov-prover-storage-manager    = { workspace = true }
sov-rollup-interface          = { workspace = true, features = [ "native" ] }
sov-risc0-adapter             = { workspace = true, features = [ "native" ] }
sov-sequencer                 = { workspace = true }
sov-state                     = { workspace = true, features = [ "native" ] }
sov-stf-runner                = { workspace = true }

anyhow              = { workspace = true }
async-trait         = { workspace = true }
axum                = { workspace = true }
clap                = { workspace = true }
jsonrpsee           = { workspace = true, features = ["http-client", "server"] }
prometheus_exporter = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true, features = [ "env-filter", "fmt" ] }

[dev-dependencies]
sov-cli           = { workspace = true }
sov-bank          = { workspace = true, features = [ "native" ] }
sov-ledger-apis   = { workspace = true, features = [ "server" ] }
sov-test-utils    = { workspace = true }
sov-value-setter  = { workspace = true, features = [ "native" ] }

borsh     = { workspace = true, features = ["bytes"] }
hex       = { workspace = true }
rand      = { workspace = true }
serde     = { workspace = true }
tempfile  = { workspace = true }
