[package]
name          = "filament-hub-rollup"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
publish       = { workspace = true }

[dependencies]
filament-hub-stf      = { workspace = true, features = ["native"] }
filament-prover-risc0 = { workspace = true }

sov-accounts                  = { workspace = true, features = ["native"] }
sov-bank                      = { workspace = true, features = ["native"] }
sov-celestia-adapter          = { workspace = true, features = ["native"], optional = true }
sov-cli                       = { workspace = true }
sov-db                        = { workspace = true }
sov-kernels                   = { workspace = true, features = ["native"] }
sov-ledger-apis               = { workspace = true }
sov-mock-da                   = { workspace = true, features = ["native"], optional = true }
sov-mock-zkvm                 = { workspace = true, features = ["native"] }
sov-modules-api               = { workspace = true, features = ["native"] }
sov-modules-rollup-blueprint  = { workspace = true }
sov-modules-stf-blueprint     = { workspace = true, features = ["native"] }
sov-risc0-adapter             = { workspace = true, features = ["native"] }
sov-rollup-interface          = { workspace = true }
sov-state                     = { workspace = true }
sov-sequencer                 = { workspace = true }
sov-sequencer-registry        = { workspace = true, features = ["native"] }
sov-stf-runner                = { workspace = true }

anyhow              = { workspace = true }
async-trait         = { workspace = true }
axum                = { workspace = true }
backon              = { workspace = true }
borsh               = { workspace = true }
clap                = { workspace = true }
jsonrpsee           = { workspace = true }
prometheus_exporter = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
sha2                = { workspace = true }
tokio               = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing             = { workspace = true }
tracing-appender    = { workspace = true }

# binary dependencies
bytes               = "1.7.1"
rand                = "0.8.5"
tracing-panic       = "0.1.2"
tracing-subscriber  = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
futures         = { version = "0.3", default-features = false }
sov-test-utils  = { workspace = true }
sov-mock-zkvm   = { workspace = true, features = ["native"] }
tempfile        = { workspace = true }

[features]
default     = ["mock_da"]                  # set mock_da as the default feature
celestia_da = ["sov-celestia-adapter"]
mock_da     = ["sov-mock-da"]

[[bin]]
name = "node"
path = "src/bin/node.rs"
