[package]
name          = "filament-hub-stf"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
publish       = { workspace = true }

[dependencies]
filament-hub-core = { workspace = true }
filament-hub-eth  = { workspace = true }

sov-accounts            = { workspace = true }
sov-attester-incentives = { workspace = true }
sov-bank                = { workspace = true }
sov-nonces              = { workspace = true }
sov-prover-incentives   = { workspace = true }
sov-sequencer-registry  = { workspace = true }

sov-capabilities          = { workspace = true }
sov-mock-da               = { workspace = true }
sov-modules-api           = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-rollup-interface      = { workspace = true }
sov-sequencer             = { workspace = true, optional = true }
sov-state                 = { workspace = true }

anyhow      = { workspace = true }
borsh       = { workspace = true, features = ["rc", "bytes"] }
clap        = { workspace = true, features = ["derive"], optional = true }
jsonrpsee   = { workspace = true, features = ["http-client", "server"], optional = true }
serde       = { workspace = true, features = ["derive", "rc"] }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["sync"], optional = true }
tracing     = { workspace = true }

[features]
default = []
native = [
    "filament-hub-core/native",

    "sov-accounts/native",
    "sov-attester-incentives/native",
    "sov-bank/native",
    "sov-nonces/native",
    "sov-prover-incentives/native",
    "sov-sequencer-registry/native",

    "sov-capabilities/native",
    "sov-mock-da/native",
    "sov-modules-api/native",
    "sov-modules-stf-blueprint/native",
    "sov-rollup-interface/native",
    "sov-state/native",
    "sov-sequencer",
    "sov-state/native",

    "clap",
    "jsonrpsee",
    "tokio",
]
