[package]
name    = "pulzaar-proto-build"
version = "0.1.0"
authors = ["xla self@xla.is"]
edition = "2021"
publish = false


[dependencies]
prost         = { version = "0.11", default-features = false }
prost-build   = { version = "0.11", default-features = false }
prost-types   = { version = "0.11", default-features = false }
tempfile      = { version = "3.3",  default-features = false }
