[package]
name          = "filament-hub-core"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
publish       = { workspace = true }

[lints]
workspace = true

[dependencies]
sov-bank        = { workspace = true }
sov-modules-api = { workspace = true }
sov-state       = { workspace = true }

anyhow          = { workspace = true }
borsh           = { workspace = true, features = [ "rc" ] }
jsonrpsee       = { workspace = true, optional = true, features = [ "client-core", "macros", "server" ] }
lazy_static     = { workspace = true }
schemars        = { workspace = true, optional = true }
serde           = { workspace = true }
serde_bytes     = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
filament-hub-core = { path = ".", version = "*", features = [ "native" ] }

sov-test-utils = { workspace = true }

assert_matches    = { workspace = true }
pretty_assertions = { workspace = true, features = [ "alloc" ] }
serde_json        = { workspace = true }
tempfile          = { workspace = true }

[features]
default = []
native = [
  "filament-hub-core/native",
  "jsonrpsee",
  "schemars",
  "sov-bank/native",
  "sov-modules-api/native",
  "sov-state/native",
]
