[package]
name          = "filament-hub-indexer-registry"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
publish       = { workspace = true }

[lints]
workspace = true

[dependencies]
sov-modules-api = { workspace = true }
sov-state       = { workspace = true }

anyhow          = { workspace = true }
borsh           = { workspace = true, features = [ "rc" ] }
clap            = { workspace = true, optional = true }
schemars        = { workspace = true, optional = true }
serde           = { workspace = true }
serde_json      = { workspace = true, optional = true }
tracing         = { workspace = true }

[dev-dependencies]
filament-hub-indexer-registry = { path = ".", version = "*", features = [ "native" ] }

sov-test-utils              = { workspace = true }
sov-prover-storage-manager  = { workspace = true, features = [ "test-utils" ] }

tempfile = { workspace = true }

[features]
default = []
native = [
  "clap",
  "filament-hub-indexer-registry/native",
  "schemars",
  "serde_json",
  "sov-modules-api/native",
  "sov-state/native",
]
