[package]
name          = "filament-prover-risc0"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
publish       = { workspace = true }

[lints]
workspace = true

[build-dependencies]
risc0-build = { workspace = true }

[package.metadata.risc0]
methods = ["guest-celestia", "guest-mock"]

[features]
bench = []
