[package]
name          = "filament-prover-sp1"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
publish       = { workspace = true }

[dependencies]
lazy_static = { workspace = true }

[lints]
workspace = true

[build-dependencies]
sp1-helper = { version = "1", default-features = false }

[features]
bench = []
