[package]
name          = "hub-stf"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
# rust-version  = { workspace = true }
publish       = { workspace = true }

[dependencies]
fila-outposts             = { workspace = true }

sov-ibc                   = { workspace = true }

sov-accounts              = { workspace = true }
sov-bank                  = { workspace = true }
sov-sequencer-registry    = { workspace = true }

sov-mock-da               = { workspace = true }
sov-modules-api           = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-rollup-interface      = { workspace = true }
sov-state                 = { workspace = true }
sov-stf-runner            = { workspace = true }

anyhow      = { workspace = true }
clap        = { workspace = true, optional = true, features = ["derive"] }
hex         = { workspace = true, features = ["alloc", "serde"] }
jsonrpsee   = { workspace = true, optional = true, features = ["jsonrpsee-types"] }
borsh       = { workspace = true, features = ["rc", "bytes"] }
serde       = { workspace = true, features = ["derive", "rc"] }
serde_json  = { workspace = true }
tracing     = { workspace = true }


[features]
default = ["serde"]
native  = [
  "fila-outposts/native",

  "sov-accounts/native",
  "sov-bank/native",
  "sov-sequencer-registry/native",

  "sov-mock-da/native",
  "sov-modules-api/native",
  "sov-modules-stf-blueprint/native",
  "sov-stf-runner/native",

  "clap",
  "jsonrpsee",
  "serde",
]
serde   = [
  "fila-outposts/serde",

  "sov-accounts/serde",
  "sov-bank/serde",
  "sov-sequencer-registry/serde",

  "sov-modules-api/serde",
]
